# pl_tutorial

./: .gitignore  README.md  main.py  pyproject.toml
basic/: 1_train_model.ipynb  2_val_test_model.ipynb  2_val_test_model_early_stopping.ipynb  3_transfer_learning.ipynb  4_cli.ipynb  5_understand_visualize_model.ipynb  6_predict.ipynb
