[project]
name = "pl-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torchvision>=0.24.1",
]
